# map-classes

./: map-class.cabal  package.yaml
src/Control/Class/: Map.hs
src/Control/Class/Impl/: Map.hs  Test.hs
src/Control/Class/Impl/Map/: CPP.hs  Funcs.hs
src/Control/Class/Impl/Monadic/: Map.hs
