name:                map-class
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/clintonmead/map-class#readme
license:             BSD3
license-file:        LICENSE
author:              Clinton Mead
maintainer:          clintonmead@gmail.com
copyright:           Copyright: (c) 2017 Clinton Mead
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Class.Impl.Map, Control.Class.Impl.Test
  other-modules:       Control.Class.Impl.Map.CPP
  build-depends:       base >= 4.7 && < 5, containers, array, transformers, utility-ht, kan-extensions, bytestring
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/clintonmead/map-class
